--- a/LB/LB.tex
+++ b/LB/LB.tex
@@ -177,27 +177,31 @@ bool checkEnd(double F) {
 	\addcontentsline{toc}{subsection}{Тип дифференциальных уравнений и их общее решение}
 
 	$${\rm e}^{x} \cdot \sin^{3}{y} = y'\cdot \sin{x}$$ 
-	Тип уравнения:\\	
+	Тип: уравнение с разделяющимися переменными.\\	
 	Ответ: 
 	\begin{equation}
+		{\frac{\cos^3{y} - 3 \cos{y}}{3} = C - \frac{e^{-\log{e \cdot x}}(\log{e} \sin{x} + \cos{x})}{(\log{e})^2 + 1}}
 	\end{equation}
 
 	$$xy' \cdot \tg{y} = 2 - x^2 \cdot \ln(x^2 \cdot \cos{y})$$
-	Тип уравнения:\\
+	Тип: уравнение приводящееся к линейному.\\
 	Ответ:
 	\begin{equation}
+		{y(x) = \pm \cos^{-1}{\left( \frac{e^{Ce^{x^2/2}}}{x^2} \right)}}
 	\end{equation}
 
 	$$y' = \frac{2x + 3y - 5}{5 - 3x - 2y}$$ 
-	Тип уравнения:\\
+	Тип: уравнение приводящееся к однородному.\\
 	Ответ:
 	\begin{equation}
+		{y(x)= \frac{1}{2}(5 - 3x) \pm \frac{\sqrt{C + 4 (\frac {5x}{2} - \frac{x^2}{2}) + \frac{1}{2}(3x-5)^2}}{\sqrt{2}} + \frac{1}{2}(5 - 3x)}
 	\end{equation}
 	
 	$$y' \cdot \tg{x} - y = x \cdot \ cos{x}$$ 
-	Тип уравнения:\\
+	Тип: линейное уравнение 1-го порядка.\\
 	Ответ:
 	\begin{equation}
+		{y(x) = C \cdot \sin(x) - \frac{1}{2} \cdot x^2 \cdot \sin(x) - x\cos(x) + \sin(x) \cdot \ln(\sin(x))}
 	\end{equation}
 
 	\newpage
