--- a/LB/LB.tex
+++ b/LB/LB.tex
@@ -20,7 +20,7 @@
 	\addcontentsline{toc}{subsection}{Описать решение интеграла}		
 
 	1. Вычислить следующий интеграл с подробным описанием всех действий:
-	$$ \int \frac{\ln x^2}{x^2} ~ dx$$
+	\[\int \frac{\ln x^2}{x^2} ~ dx\]
 	
 	\begin{equation*}
 		\begin{aligned}
@@ -37,10 +37,9 @@
 	\newpage
 	\subsection*{Численное решение}
 
-	2. Численно вычислить следующий интеграл с точностью $\epsilon = 10^{-3}$:
+	2. Численно вычислить следующий интеграл с точностью $\varepsilon = 10^{-3}$:
 
-	$$\int\limits_1^\infty  \frac{{\rm e}^{-x}}{x} ~ dx$$
-
+	\[\int\limits_1^\infty  \frac{{\rm e}^{-x}}{x} ~ dx\]
 	\addcontentsline{toc}{subsection}{Численное решение}
 	\subsection*{Метод левых прямоугольников}
 	\begin{lstlisting}[language=C++, basicstyle=\footnotesize\ttfamily, frame = single]
@@ -162,52 +161,47 @@ bool checkEnd(double F) {
 
 	\end{lstlisting}
 \newpage
-1. Метод левых прямоугольников:  0.219384, ~ $\delta$ = 0.119732\\
 
-2. Метод правых прямоугольников: 0.219384, ~ $\delta$ = 0.119732\\
+\begin{enumerate}
+	\item Метод левых прямоугольников:  0.219384, ~ $\delta$ = 0.119732\\
 
-3. Метод средних прямоугольников: 0.219384, ~ $\delta$ 0.119732\\
+	\item Метод правых прямоугольников: 0.219384, ~ $\delta$ = 0.119732\\
 
-4. Метод трапеции: 0.219384, ~ $\delta$ = 0.119732\\
+	\item Метод средних прямоугольников: 0.219384, ~ $\delta$ 0.119732\\
 
-5. Реальное решение: 0.219384
+	\item Метод трапеции: 0.219384, ~ $\delta$ = 0.119732\\
+
+	\item Реальное решение: 0.219384
+\end{enumerate}
 
 \newpage
 	\subsection*{Тип дифференциальных уравнений и их общее решение}
 	\addcontentsline{toc}{subsection}{Тип дифференциальных уравнений и их общее решение}
 
-	$${\rm e}^{x} \cdot \sin^{3}{y} = y'\cdot \sin{x}$$ 
-	Тип: уравнение с разделяющимися переменными.\\	
-	Ответ: 
-	\begin{equation}
-		{\frac{\cos^3{y} - 3 \cos{y}}{3} = C - \frac{e^{-\log{e \cdot x}}(\log{e} \sin{x} + \cos{x})}{(\log{e})^2 + 1}}
-	\end{equation}
+\begin{enumerate}
 
-	$$xy' \cdot \tg{y} = 2 - x^2 \cdot \ln(x^2 \cdot \cos{y})$$
-	Тип: уравнение приводящееся к линейному.\\
-	Ответ:
-	\begin{equation}
-		{y(x) = \pm \cos^{-1}{\left( \frac{e^{Ce^{x^2/2}}}{x^2} \right)}}
-	\end{equation}
+	\item  \[ {\rm e}^{x} \cdot \sin^{3}{y} = y'\cdot \sin{x}\] 
+	Уравнение с разделяющимися переменными.\\	
+	Общее решение: $${\frac{\cos^3{y} - 3 \cos{y}}{3} = C - \frac{e^{-\log{e \cdot x}}(\log{e} \sin{x} + \cos{x})}{(\log{e})^2 + 1}}$$
 
-	$$y' = \frac{2x + 3y - 5}{5 - 3x - 2y}$$ 
-	Тип: уравнение приводящееся к однородному.\\
-	Ответ:
-	\begin{equation}
-		{y(x)= \frac{1}{2}(5 - 3x) \pm \frac{\sqrt{C + 4 (\frac {5x}{2} - \frac{x^2}{2}) + \frac{1}{2}(3x-5)^2}}{\sqrt{2}} + \frac{1}{2}(5 - 3x)}
-	\end{equation}
+	\item \[xy' \cdot \tg{y} = 2 - x^2 \cdot \ln(x^2 \cdot \cos{y}) \]
+	Уравнение приводящееся к линейному.\\
+        Общее решение: $${y(x) = \pm \cos^{-1}{\left( \frac{e^{Ce^{x^2/2}}}{x^2} \right)}}$$
+
+	\item \[y' = \frac{2x + 3y - 5}{5 - 3x - 2y}\] 
+	Уравнение приводящееся к однородному.\\
+	Общее решение: $${y(x)= \frac{1}{2}(5 - 3x) \pm \frac{\sqrt{C + 4 (\frac {5x}{2} - \frac{x^2}{2}) + \frac{1}{2}(3x-5)^2}}{\sqrt{2}} + \frac{1}{2}(5 - 3x)}$$
 	
-	$$y' \cdot \tg{x} - y = x \cdot \ cos{x}$$ 
-	Тип: линейное уравнение 1-го порядка.\\
-	Ответ:
-	\begin{equation}
-		{y(x) = C \cdot \sin(x) - \frac{1}{2} \cdot x^2 \cdot \sin(x) - x\cos(x) + \sin(x) \cdot \ln(\sin(x))}
-	\end{equation}
+	\item \[y' \cdot \tg{x} - y = x \cdot \cos{x}\]
+	Линейное уравнение 1-го порядка.\\
+	Общее решение: $${y(x) = C \cdot \sin(x) - \frac{1}{2} \cdot x^2 \cdot \sin(x) - x\cos(x) + \sin(x) \cdot \ln(\sin(x))}$$
+
+\end{enumerate}
 
 	\newpage
 	\subsection*{Проверка решения задачи Коши}
 	\addcontentsline{toc}{subsection}{Проверка решения задачи Коши}
-		$$xy' \cdot (e^{y} - x), ~~~y(0) = \ln{2}; ~~~xy = e^y-2$$
+		\[xy' \cdot (e^{y} - x), ~~~y(0) = \ln{2}; ~~~xy = e^y-2\]
 		
 
 \end{document}
